# STM32duino-bootloader

./: CMakeLists.txt  Dockerfile  Makefile  README.md  build_inside_docker.sh  config.h  hardware.c  hardware.h  main.c  usb_descriptor.c
src/: config.h  dfu.c  dfu.h  hardware.c  hardware.h  main.c  usb.c  usb.h  usb_descriptor.c  usb_descriptor.h
stm32_lib/: c_only_md_high_density.ld  c_only_startup.s
toolchain/: clang.cmake  gcc.cmake
